2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45788
	* g++.dg/pr45788.C: New testcase.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45970
	* gcc.dg/tree-ssa/ssa-dse-13.c: New testcase.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45982
	* gcc.dg/torture/pr45982.c: New testcase.
	* gcc.dg/tree-ssa/pr24287.c: Adjust.
	* gcc.dg/tree-ssa/pta-callused.c: Likewise.
	* gcc.dg/torture/pr39074-2.c: Likewise.

2010-10-13  Richard Guenther  <rguenther@suse.de>

	PR middle-end/45874
	* g++.dg/torture/pr45874.C: New testcase.

2010-10-13  Iain Sandoe  <iains@gcc.gnu.org>

	* objc.dg/attributes/method-attribute-1.m: Update to respond
	to implemented method attributes..
	* objc.dg/attributes/method-attribute-2.m: Likewise.
	* objc.dg/attributes/method-attribute-3.m: Likewise.
	* obj-c++.dg/attributes/method-attribute-1.mm: Likewise.
	* obj-c++.dg/attributes/method-attribute-2.mm: Likewise.
	* obj-c++.dg/attributes/method-attribute-3.mm: Likewise.

2010-10-13  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR libobjc/23214
	* objc.dg/pr23214.m: New.

2010-10-12  Michael Eager  <eager@eagercon.com>

	PR testsuite/45856
	* gcc.c-torture/execute/cmpsi-2.c: Use int, not long.
	* gcc.c-torture/execute/cmpsf-1.c: Use float, regen correct table.

2010-10-12  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/45636
	* gcc.c-torture/execute/pr45636.c: New test.
	* gfortran.dg/pr45636.f90: New test.

2010-10-12  Richard Henderson  <rth@redhat.com>

	* g++.dg/abi/mangle40.C: Robustify tests for defined symbols.

2010-10-12  Daniel Kraft  <d@domob.eu>

	PR fortran/38936
	* gfortran.dg/associate_1.f03: More tests with derived-types.
	* gfortran.dg/associate_9.f03: New test (XFAIL for now).
	* gfortran.dg/associate_8.f03: Fix typo.
	* gfortran.dg/initialization_27.f90: Fix typo.

2010-10-12  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR testsuite/45851